# ChangeLog for dev-perl/Email-Address
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.88 2013/08/25 07:48:21 patrick Exp $

*Email-Address-1.900.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Email-Address-1.900.0.ebuild:
  Bump

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for sparc, wrt bug #463044

  18 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for alpha, wrt bug #463044

  17 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for ia64, wrt bug #463044

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for ppc64, wrt bug #463044

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for ppc, wrt bug #463044

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for x86, wrt bug #463044

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.898.0.ebuild:
  Stable for amd64, wrt bug #463044

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for sparc, wrt bug #457302

  30 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for alpha, wrt bug #457302

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for ia64, wrt bug #457302

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for ppc64, wrt bug #457302

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for ppc, wrt bug #457302

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for x86, wrt bug #457302

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Email-Address-1.897.0.ebuild:
  Stable for amd64, wrt bug #457302

*Email-Address-1.898.0 (10 Feb 2013)
