@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX mpv-0.3.11-libav-9.patch 291 SHA256 971cdcaf866fcb5f1a93663357c582b474480f5fb1986eb2ba7d0f77b99c15d6 SHA512 2045d9e6550f43bf31b2bd68c35ef57a8bff392d1e70522e4085f275f333fc07cbe8bbbad7f7a7ae2979d177cb347e317e7c7eeb107707206a70016fcc5b8ccf WHIRLPOOL 35666ed94ceb001e62679bbac64a898a74a6e8285876fcbd3c8f40ac58b8978e993702f81e16fa2c98ed773b180d5cb04b5d0358ee3a150e9bbe1a2941764da4
 DIST mpv-0.3.10.tar.gz 2520710 SHA256 ec1d9751f9c43f66e13a988c94748ee2e1d8188498001f905213c9ccdf573fce SHA512 fdf84439747e24b4278f09427fc22d6497d2105cf94cd3c45dfb134af917f81c4748d618e962fb13a9db2b7a260a88a409590d10aae71ac987831bc3d293196e WHIRLPOOL d9a4eb6f01ee965b915e9064d75f710dd922a0db1e8a6b9655c844548bbde37c1cca1efd495c5d0f160b4b3823947c13e08e4634c6907fbd44abe758d0a6c552
 DIST mpv-0.3.11.tar.gz 2521150 SHA256 c686adb4820be32ff59bbcd64adaeebd2ac71cad762c50b6105f6e7424d72af2 SHA512 da4a55af98f178624ec66e48e314f045b61aef75fc9b654f39011879b0eb5b59a86870b9ed05bc11b831fbb5ec2084c5e842743d3040a155713a802908816374 WHIRLPOOL 18a6cd9436b3c2b5f18b95c974cbe79ff4c073b1d7403d35b77d091c18dcac9e17b03386a020e1c21db4727bfa3fa8e301f7f7dc3863cdf14fa4f9c653ab6952
@@ -6,7 +9,18 @@ DIST waf-1.7.15 90909 SHA256 e5ae7028f9b2d8ce1acb9fe1092e8010a90ba764d3ac065ea4e
 DIST waf-1.7.16 91846 SHA256 b64dc26c882572415fd450b745006107965f3fe17b357e3eb43d6676c9635a61 SHA512 ccdf27cac76f525e11bde20d01c3f81b738b4c990934ee290a390fcf1b278da05047bcee76973c80be4557689344f6df33c13e232b278258745e2f19eeed5ebf WHIRLPOOL 79b59876606a93c7a13548799c8797f40515cbf8bc2944018de758df3e8cd9698e4304d5d26a03ae883195ec02d6e0b12e6fc7160e4ef31446d7c3d05f98983a
 EBUILD mpv-0.3.10.ebuild 6287 SHA256 66686d6ab4acfd3f87d6e5dbe8c4e0edf5e58179acbfcf8381ed9922154fdb54 SHA512 e53e6242c742a611468728f05688055a3ea8c29b9e26c1bcc668576625ea218a4a7c0f1de04e423dd5eaf73b72f2e6ebcaa19dddace10a367b97e870348b3e6a WHIRLPOOL af46848b35cb3d3a3fb688ec5274f9af8cda3679a73540b6897e4f0983c4045d1f63874135ec9356c3fb44d1d8dca6d6e3a61c457756344446b3a12836f880a1
 EBUILD mpv-0.3.11.ebuild 6331 SHA256 62d3b900051619de87d7140cb40cbba88be2d02cc9e02d87b727659abb19beac SHA512 b95d2bfbcaa4f4d14f41132d6875f4d95707f415371d48d9e9ad348089dbd789f630c6e0d824b6941b486c60466da1330733c30c137b9c968a25f131e77aded6 WHIRLPOOL 1a78a4040251d7e0e31ec90da619c4cfca1d149f3e19aa684c1ee2b96713c1c778ceef8361d3a985282e1be1d6b660b25008177787078923b11edf6816a7c6fe
-EBUILD mpv-0.4.0.ebuild 6068 SHA256 6d2f0d199149c9ff46d3c51ed375de29a466abeeac290398fbe4dfb6329bb44d SHA512 7545421416f7433fbf1c119bf2d8626d87a8e3b596455a8e5e43741c1199942b4f188cbdf300fffa80a09c50d3e31fbe5e832e18d50fa13a6fe43bf031a3ab87 WHIRLPOOL 4f9d382b5b0e0145fdd4b992406f2d46c877f3d08f7e482ae852b185db4e631d490535cc5c9059ee8bd87e5d6c175d8ea870517a30093f8088c0d426a283e240
-EBUILD mpv-9999.ebuild 6068 SHA256 7c3eef997b3ac2e7491cbcfef7ac257650d50f746805852f49f1e60de1f8e15a SHA512 a8c1da8691e24fc8dee5b26cddc3fef76dea38ffbfd783b7c619eeb562d85f50db69b38e247c657be054e339ddeb3ecaa0d88205aed280f2e690442ab3193195 WHIRLPOOL 32352544cea1e96de4b0d637a5fee6a23cb54a04dde22d1e4d06cd273ae03fd7e8167683637d28b899aed3eac6a36c5e4211e6da77d8e1131d101b27bfb0b329
-MISC ChangeLog 13563 SHA256 9e7aaf2ea16e57a4286a9bf131b51afe9528dac658e218e2e0910c4547bb9c87 SHA512 b41e2bfcb2699263e0a40793a8ada07a26777f2ec4560f8de126f2f2de49552355dd09d385f1aba3f569dfd8c2315ac564afb6bc75547faff654628ebaa9dc92 WHIRLPOOL 83e4b388c3cbdb1f33200ab026f30013b86c1a4f00f4346e7923e74dfef7c488b387130a751d4eecb99e629180f4e67efd73055ddd4af8a248b6f721244e883f
-MISC metadata.xml 1736 SHA256 0e4d2c19d37d4a7ac26b3fff974ad552ac10eccd805299fdbcfbb3dc70f104de SHA512 ed48c6ac83a88acb31f4686e3a34701ac0e45b12e4d61a7af352a4288057fe03d60fc0fa26b92ec54a016a4757af08d4609246f41f6626d4ff5cee9b04c176f8 WHIRLPOOL c7eab998ed1551b8286780d05103a2f7f9a77b37d85e320f5b2be5f68fa47eaef64337a5b2ecd0b0a0f851eda92b0b8de8bf3d3964192a48342483752d62aaa3
+EBUILD mpv-0.4.0.ebuild 6114 SHA256 b94f4613b087c019d3093e18122aefd1ad234491a6105ee808e532ab5e0aacb4 SHA512 8f1d833536a1661a8efdeca25c1d29bebc6a245b3ba84a0ae618c403775c4a435de24b0d292b57f5d40dec480adbe048cb09ad3aa78049246bddbe4acb955131 WHIRLPOOL 956c73baf1f0cbfe4d94338cf5b96f9df3e94c481a1d76d325ae7fe2ba0c171b5bea0b6f88e34c66a28d57c24ea88583a04a680c4bf0acc3eae31d4b7a36d7f9
+EBUILD mpv-9999.ebuild 6114 SHA256 4a0ed08f86c909ef8f8c715aa1cd36d1efe4a61308c9982b2fc439d6a0bdf601 SHA512 ee4474032144e0c00ee81ce893277c3a98718c981bc1baa41a84fb85f2f110c6ff96329f274f07dd81dda6554a2cdc29bd565b227307777ff0022c88112c4150 WHIRLPOOL d82001193fbe57775e392bb9f035f59f38ddab24f19068fa83ea2e8b93db88664f1921d68776259504437e3b52339b23ae4b111432f51e9da01034183d405615
+MISC ChangeLog 13727 SHA256 49a43b004d6e1d26838c1afb4e6253059d34bed07347508e733dab8f461fb265 SHA512 be27464bafe80bf6931a781e228a316c1d7203ab16b79cd81fe048eb4a0a693e81cfab5356285f885694ed20473b2d2b7b3d2f3ba9474425f2c24813de75caa0 WHIRLPOOL 89963c5298a57ff777e33499543f806ee59d0a8c819988010f7d4c9a2d455732b0285eff49f591ca9c507fffba1bfc39d1dbdfe75f0d39ee136b468096c2c685
+MISC metadata.xml 1789 SHA256 26fbda27a82c523c5a720c4290984f37529638559808285701dbf39b6d666a58 SHA512 e53cd794948a3d7c741f9044a7b7f30f91403fc7d64a2217b31773c9ebdd328906614e340b97e3d142689f13c65efec8dfb1b01c514a0dd679274d210f3b0391 WHIRLPOOL 7cc740c67d439fbbb4137b9ef6a3268ee7af86de870f9e718b25ed00f2d2ec1cce8314907ec31ca8145f01d0e4f7be4e5704bd1e03a6bf317209b5b2ebe3d874
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJTvlUNAAoJEAmJmMX429re5u4H/0HqJwMJ30MpBKNta0WW609E
+GEUcPmCydL2PfuXLdjZS5zuXzaHPynoIB1XU6ENS34sZlTJp03dJ8hVcYjB4ysCl
+NMl9gOGOVqF77TsY3ZMVjsoJCAK6JmbkwNCNtTzMCBE8xBYU/ljzKEaha6yFmS3s
+9Te1qwhhGwrPlR1qwpGJxIHri98S5vWXfG9i7L9qhy9UN+teuJhJKXtmkGbtauUK
+xoViEf2T9m549tqz5WjkuT9Ljm29YnvB92c3P4lddnW6gMmv8CJ9xroBSfLirMFq
+05ggHr994iw5MVPVD90Jy2U0jCZk5jPav3imtrZYNi8r3g4hRwCvcXpm8P6pWy4=
+=esU4
+-----END PGP SIGNATURE-----
