@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/mpv-0.4.0.ebuild,v 1.1 2014/07/09 16:27:38 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/mpv-0.4.0.ebuild,v 1.2 2014/07/10 08:57:47 maksbotan Exp $
 
 EAPI=5
 
@@ -22,7 +22,7 @@ SLOT="0"
 [[ ${PV} == *9999* ]] || \
 KEYWORDS="~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
 IUSE="+alsa bluray bs2b cdio -doc-pdf dvb +dvd dvdnav +enca encode +iconv jack -joystick
-jpeg ladspa lcms +libass libcaca libguess lirc lua luajit +mpg123 -openal +opengl
+jpeg ladspa lcms +libass libcaca libguess libmpv lirc lua luajit +mpg123 -openal +opengl
 oss portaudio postproc pulseaudio pvr +quvi samba sdl selinux +shm v4l vaapi vdpau
 vf-dlopen wayland +X xinerama +xscreensaver +xv"
 
@@ -186,6 +186,7 @@ src_configure() {
 		$(use_enable iconv) \
 		$(use_enable libass) \
 		$(use_enable libguess) \
+		$(use_enable libmpv libmpv-shared) \
 		$(use_enable dvb) \
 		$(use_enable pvr) \
 		$(use_enable v4l libv4l2) \
