@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=test? ( virtual/perl-Test-Simple >=dev-perl/Test-Pod-1.14 >=dev-perl/Test-Pod-Coverage-1.08 dev-perl/Capture-Tiny ) dev-lang/perl:=[-build(-)]
+DESCRIPTION=RFC 2822 Address Parsing and Creation
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/Email-Address/
+IUSE=test
+KEYWORDS=~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
+RDEPEND=dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/R/RJ/RJBS/Email-Address-1.905.tar.gz
+_eclasses_=eutils	76fc3c462065bb4ca959f939e6793f94	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641
+_md5_=454b3626b9f085d20cf43299e2ff4bae
