@@ -3,7 +3,7 @@ DEPEND=|| ( >=media-video/libav-10:=[encode?,threads,vaapi?,vdpau?] >=media-vide
 DESCRIPTION=Video player based on MPlayer/mplayer2
 EAPI=5
 HOMEPAGE=http://mpv.io/
-IUSE=+alsa bluray bs2b cdio -doc-pdf dvb +dvd dvdnav +enca encode +iconv jack -joystick jpeg ladspa lcms +libass libcaca libguess lirc lua luajit +mpg123 -openal +opengl oss portaudio postproc pulseaudio pvr +quvi samba sdl selinux +shm v4l vaapi vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv
+IUSE=+alsa bluray bs2b cdio -doc-pdf dvb +dvd dvdnav +enca encode +iconv jack -joystick jpeg ladspa lcms +libass libcaca libguess libmpv lirc lua luajit +mpg123 -openal +opengl oss portaudio postproc pulseaudio pvr +quvi samba sdl selinux +shm v4l vaapi vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv
 KEYWORDS=~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux
 LICENSE=GPL-2
 RDEPEND=|| ( >=media-video/libav-10:=[encode?,threads,vaapi?,vdpau?] >=media-video/ffmpeg-2.1.4:0=[encode?,threads,vaapi?,vdpau?] ) sys-libs/ncurses sys-libs/zlib X? ( x11-libs/libX11 x11-libs/libXext x11-libs/libXxf86vm opengl? ( virtual/opengl ) lcms? ( >=media-libs/lcms-2.6:2 ) vaapi? ( >=x11-libs/libva-0.34.0[X(+)] ) vdpau? ( >=x11-libs/libvdpau-0.2 ) xinerama? ( x11-libs/libXinerama ) xscreensaver? ( x11-libs/libXScrnSaver ) xv? ( x11-libs/libXv ) ) alsa? ( media-libs/alsa-lib ) bluray? ( >=media-libs/libbluray-0.3.0 ) bs2b? ( media-libs/libbs2b ) cdio? ( dev-libs/libcdio dev-libs/libcdio-paranoia ) dvb? ( virtual/linuxtv-dvb-headers ) dvd? ( >=media-libs/libdvdread-4.1.3 dvdnav? ( >=media-libs/libdvdnav-4.2.0 ) ) enca? ( app-i18n/enca ) iconv? ( virtual/libiconv ) jack? ( media-sound/jack-audio-connection-kit ) jpeg? ( virtual/jpeg:0 ) ladspa? ( media-libs/ladspa-sdk ) libass? ( >=media-libs/libass-0.9.10:=[enca?,fontconfig] virtual/ttf-fonts ) libcaca? ( >=media-libs/libcaca-0.99_beta18 ) libguess? ( >=app-i18n/libguess-1.0 ) lirc? ( app-misc/lirc ) lua? ( !luajit? ( >=dev-lang/lua-5.1 ) luajit? ( dev-lang/luajit:2 ) ) mpg123? ( >=media-sound/mpg123-1.14.0 ) openal? ( >=media-libs/openal-1.13 ) portaudio? ( >=media-libs/portaudio-19_pre20111121 ) postproc? ( || ( >=media-libs/libpostproc-10.20140517 >=media-video/ffmpeg-2.1.4:0 ) ) pulseaudio? ( media-sound/pulseaudio ) quvi? ( >=media-libs/libquvi-0.4.1:= || ( >=media-video/libav-10[network] >=media-video/ffmpeg-2.1.4:0[network] ) ) samba? ( net-fs/samba ) sdl? ( media-libs/libsdl2[threads] ) selinux? ( sec-policy/selinux-mplayer ) v4l? ( media-libs/libv4l ) wayland? ( >=dev-libs/wayland-1.3.0 media-libs/mesa[egl,wayland] >=x11-libs/libxkbcommon-0.3.0 )
@@ -11,4 +11,4 @@ REQUIRED_USE=dvdnav? ( dvd ) enca? ( iconv ) lcms? ( opengl ) libguess? ( iconv 
 SLOT=0
 SRC_URI=http://ftp.waf.io/pub/release/waf-1.7.16 https://github.com/mpv-player/mpv/archive/v0.4.0.tar.gz -> mpv-0.4.0.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	76fc3c462065bb4ca959f939e6793f94	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	waf-utils	8ba4703b0e4f03e42a8f6e7b8aabd9e6
-_md5_=92f2e8bb138eda37fc7af76182228c6e
+_md5_=f4d311476ac31e76dc731d1718dcb353
