@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mpv
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.84 2014/07/10 01:38:29 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.85 2014/07/10 08:57:47 maksbotan Exp $
+
+  10 Jul 2014; Maxim Koltsov <maksbotan@gentoo.org> metadata.xml,
+  mpv-0.4.0.ebuild, mpv-9999.ebuild:
+  Restore libmpv useflag, now in ebuild too. Bug #516742.
 
   10 Jul 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove unneeded useflag description from metadata.xml
